tests/ui/traits/const-traits/specialization/const-default-bound-non-const-specialized-bound.stderr
error[E0049]: associated function `bar` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:16:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Bar {
LL |     fn bar();
   |           - expected 0 const parameters

error: cannot specialize on const impl with non-const impl
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:28:1
   |
LL | / impl<T> Bar for T
LL | | where
LL | |     T: Foo, //FIXME ~ ERROR missing `~const` qualifier
LL | |     T: Specialize,
   | |__________________^

error[E0049]: associated function `baz` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:36:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Baz {
LL |     fn baz();
   |           - expected 0 const parameters

error[E0049]: associated function `baz` has 1 const parameter but its trait declaration has 0 const parameters
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:36:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ found 1 const parameter
LL | trait Baz {
LL |     fn baz();
   |           - expected 0 const parameters
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0049`.
